# Snake

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/glsl/: standard.frag  standard.vert
src/: main.cpp
src/context/: render_context.cpp  render_context.hpp
src/game/: application.cpp  application.hpp  snake.cpp  snake.hpp
src/render/: buffer.cpp  buffer.hpp  command.cpp  command.hpp
src/render/pipeline/: pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp
src/window/: swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
